log
Fri Mar 27 12:56:57 AM UTC 2026: 
 tests:  0|6
total_score: 0/60
4e3beb0
Fri Mar 27 01:01:37 AM UTC 2026: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   40 |     list->head = NULL;
      |         ^~
list.c:39:26: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = (List *)malloc(sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~
list.c:41:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   41 |     list->tail = 0;
      |         ^~
list.c:39:26: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = (List *)malloc(sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~
list.c:42:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   42 |     list->current = NULL;
      |         ^~
list.c:39:26: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = (List *)malloc(sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
650410a
Fri Mar 27 01:01:42 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   40 |     list->head = NULL;
      |         ^~
list.c:39:26: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = (List *)malloc(sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~
list.c:41:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   41 |     list->tail = 0;
      |         ^~
list.c:39:26: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = (List *)malloc(sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~
list.c:42:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   42 |     list->current = NULL;
      |         ^~
list.c:39:26: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = (List *)malloc(sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
a8d0ab2
Fri Mar 27 01:02:04 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   40 |     list->head = NULL;
      |         ^~
list.c:39:18: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = malloc(sizeof(list));
      |                  ^~~~~~~~~~~~~~~~~~~~
list.c:41:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   41 |     list->tail = 0;
      |         ^~
list.c:39:18: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = malloc(sizeof(list));
      |                  ^~~~~~~~~~~~~~~~~~~~
list.c:42:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   42 |     list->current = NULL;
      |         ^~
list.c:39:18: note: object of size 8 allocated by ‘malloc’
   39 |     List* list = malloc(sizeof(list));
      |                  ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
1a3212f
Fri Mar 27 01:02:37 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
a68d9e5
Fri Mar 27 01:39:21 AM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:53:5: error: ‘cabeza’ undeclared (first use in this function)
   53 |     cabeza = list->head;
      |     ^~~~~~
list.c:53:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
dd5b03f
Fri Mar 27 01:39:59 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:53:18: error: initialization of ‘int’ from ‘Node *’ makes integer from pointer without a cast [-Wint-conversion]
   53 |     int cabeza = list->head;
      |                  ^~~~
list.c:55:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Wint-conversion]
   55 |     return cabeza;
      |            ^~~~~~
c3e6439
Fri Mar 27 01:40:22 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:53:20: error: initialization of ‘List *’ {aka ‘struct List *’} from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   53 |     List *cabeza = list->head;
      |                    ^~~~
2fe39c1
